--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,7 +1,7 @@
 $black:#000;
 $white:#fff;
-$paragraph: #88899D;
+$paragraph: rgba(255, 255, 255, 0.80);
 $heading:#F8F6FD;
-$primary: #3561FF;
+$primary: #4080FD;
 $caption: #7AF0FF;
 $_C2C3D0: #C2C3D0;
