--- a/src/assets/scss/_marquee.scss
+++ b/src/assets/scss/_marquee.scss
@@ -1,4 +1,5 @@
 .marquee {
+    padding-block: 100px;
     border-left: none;
     border-right: none;
     width: 110%;
@@ -6,29 +7,14 @@
     position: relative;
     z-index: 99;
     overflow-x: hidden;
+    @include sm{
+        padding-block: 50px;
+    }
     .rfm-initial-child-container {
         gap: 70px;
         overflow: hidden;
-    }
-    .container{
-        max-width: 1500px;
-        position: relative;
-        z-index: 1;
-        &::before{
-            @include potion_left;
-            content: "";
-            width: 194px;
-            height: 100%;
-            background: linear-gradient(270deg, rgba(9, 9, 37, 0) 0%, #090925 100%);
-            z-index: 2;
-        }
-        &::after{
-            @include potion_right;
-            content: "";
-            width: 194px;
-            height: 100%;
-            background: linear-gradient(90deg, rgba(9, 9, 37, 0) 0%, #090925 100%);
-            z-index: 2;
+        @include sm{
+            gap: 30px;
         }
     }
 }
@@ -36,9 +22,15 @@
 .rfm-child {
     figure {
         img {
-            max-width: 250px;
+            max-width: 1100px;
+            @include mmd{
+                max-width: 600px;
+            }
             @include sm{
-                max-width: 180px;
+                max-width: 400px;
+            }
+            @include ssm{
+                max-width: 250px;
             }
         }
     }
