--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.cdnfonts.com/css/druk-trial');
 html, html body{
     overflow-x: hidden;
 }
   
 body {
-    font-family: "DM Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
     @include font-16;
     font-weight: 400;
     background-color: #070913;
@@ -18,22 +20,26 @@ h4,
 h5,
 h6 {
     font-weight: 600;
-    font-family: "Rubik", sans-serif;
+    font-family: 'Druk Text Wide Trial', sans-serif;
     
 };
 h1{
-    @include font-72;
+    @include font-75;
+    font-weight: 900;
+    line-height: 130%;
+
 }
 h2{
     @include font-52;
     font-weight: 700;
     color: $heading;
+    line-height: 130%;
     span{
         color: $primary;
     }
 }
 h3{
-    @include font-28;
+    // @include font-28;
 }
 h4{
     @include font-22;
@@ -93,38 +99,65 @@ input::-webkit-inner-spin-button {
 }
 
 .container {
-   max-width: 1260px;
+   max-width: 1560px;
 }
 
 .boxed-btn{
-    color: #FFF;
-    font-size: 16px;
+    color: $white;
+    @include font-22;
     font-style: normal;
-    font-weight: 500;
-    line-height: 120%; /* 19.2px */
+    font-weight: 400;
+    line-height: 140%; /* 19.2px */
     border-radius: 14px;
-    border: 1px solid #5A83FF;
-    background: linear-gradient(315deg, #4070FF 25%, #2747A6 78.33%);
+    font-family: "Bebas Neue", sans-serif;
+    text-transform: uppercase;
+    border-radius: 8px;
+    background: $primary;
+    border: 1px solid transparent;
     display: inline-block;
-    padding: 18px 30px;
+    padding: 16px 50px;
+    padding-top: 20px;
+    @include sm{
+        padding-inline: 30px;
+    }
     @include transition;
     &:hover{
-        border: 1px solid #394770;
-        background: rgba(255, 255, 255, 0.03);
+        background: rgba(64, 128, 253, 0.08);
         backdrop-filter: blur(2.5px);
+        border: 1px solid $primary;
     }
 }
+.dual_btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
 .boxed-btn.transparent{
-    border: 1px solid #394770;
-    background: rgba(255, 255, 255, 0.03);
-    backdrop-filter: blur(2.5px);
+    border-radius: 8px;
+    border: 1px solid $primary;
+    background: rgba(64, 128, 253, 0.08);
+    backdrop-filter: blur(50px);
     &:hover{
-        border: 1px solid #5A83FF;
-        background: linear-gradient(315deg, #4070FF 25%, #2747A6 78.33%);
+        border: 1px solid $primary;
+        background: $primary;
+        backdrop-filter: blur(300px);
     }
 }
 .section-title{
-    p{
-        @include font-18;
-    }
+   h2{
+        font-family: "Druk Text Wide Trial";
+        @include font-75;
+        color: $white;
+        text-transform: uppercase;
+        span{
+            font-weight: 700;
+            line-height: 1;
+            letter-spacing: 2.9px;
+            text-transform: uppercase;
+            @include font-145;
+            color: $primary;
+            font-family: "Druk Trial";
+        }
+   }
 }
