--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -58,8 +58,88 @@
     right: 0;
 }
 
-@mixin font-72{
-    font-size: 72px;
+@mixin font-180 {
+    font-size: 180px;
+    @include xxl {
+        font-size: 150px;
+    }
+    @include xl {
+        font-size: 130px;
+    }
+    @include lg {
+        font-size: 110px;
+    }
+    @include md {
+        font-size: 90px;
+    }
+    @include sm {
+        font-size: 70px;
+    }
+}
+
+@mixin font-145 {
+    font-size: 145px;
+    @include xxl {
+        font-size: 120px;
+    }
+    @include xl {
+        font-size: 110px;
+    }
+    @include lg {
+        font-size: 100px;
+    }
+    @include md {
+        font-size: 90px;
+    }
+    @include sm {
+        font-size: 80px;
+    }
+    @include ssm {
+        font-size: 50px;
+    }
+}
+
+@mixin font-95{
+    font-size: 95px;
+    line-height: 125%;
+    @include xxl {
+        font-size: 75px;
+    }
+    @include xl {
+        font-size: 65px;
+    }
+    @include lg {
+        font-size: 60px;
+    }
+    @include md {
+        font-size: 55px;
+    }
+    @include sm {
+        font-size: 50px;
+    }
+}
+
+@mixin font-85{
+    font-size: 85px;
+    line-height: 125%;
+    @include xxl {
+        font-size: 75px;
+    }
+    @include xl {
+        font-size: 70px;
+    }
+    @include lg {
+        font-size: 65px;
+    }
+    @include md {
+        font-size: 60px;
+    }
+    @include sm {
+        font-size: 55px;
+    }
+}
+@mixin font-75{
+    font-size: 75px;
     line-height: 125%;
     @include xxl {
         font-size: 65px;
@@ -71,15 +151,29 @@
         font-size: 55px;
     }
     @include md {
-        font-size: 50px;
+        font-size: 45px;
     }
     @include sm {
-        font-size: 45px;
+        font-size: 35px;
     }
 }
 
 @mixin font-52 {
     font-size: 52px;
+    line-height: 125%;
+    @include xl {
+        font-size: 45px;
+    }
+    @include lg {
+        font-size: 40px;
+    }
+    @include mmd {
+        font-size: 35px;
+    }
+}
+
+@mixin font-50 {
+    font-size: 50px;
     line-height: 125%;
     @include xl {
         font-size: 45px;
@@ -103,8 +197,19 @@
 //     }
 // }
 
-@mixin font-28 {
-    font-size: 28px;
+@mixin font-30 {
+    font-size: 30px;
+    line-height: 160%;
+    @include md {
+        font-size: 26px;
+    }
+    @include sm {
+        font-size: 22px;
+    }
+}
+
+@mixin font-27 {
+    font-size: 27px;
     line-height: 160%;
     @include md {
         font-size: 24px;
@@ -114,19 +219,19 @@
     }
 }
 
-// @mixin font-24 {
-//     font-size: 24px;
-//     line-height: 160%;
-//     @include lg {
-//         font-size: 22px;
-//     }
-//     @include md {
-//         font-size: 20px;
-//     }
-//     @include sm {
-//         font-size: 18px;
-//     }
-// }
+@mixin font-24 {
+    font-size: 24px;
+    line-height: 160%;
+    @include lg {
+        font-size: 22px;
+    }
+    @include md {
+        font-size: 20px;
+    }
+    @include sm {
+        font-size: 18px;
+    }
+}
 
 @mixin font-22 {
     font-size: 22px;
@@ -143,7 +248,7 @@
 }
 
 @mixin font-20 {
-    font-size: 22px;
+    font-size: 20px;
     line-height: 160%;
     @include lg {
         font-size: 18px;
