--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,9 +4,10 @@
 @import '../scss/media_quers';
 @import '../scss/base';
 @import '../scss/header';
-// @import '../scss/banner';
-// @import '../scss/marquee';
-// @import '../scss/about';
+@import '../scss/banner';
+@import '../scss/marquee';
+@import '../scss/about';
+@import '../scss/huntersVsWhales';
 // @import '../scss/services';
 // @import '../scss/ecosystem';
 // @import '../scss/roadmap';
