team faq section done

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -186,16 +186,16 @@
     }
 }
 
-// @mixin font-35 {
-//     font-size: 35px;
-//     line-height: 160%;
-//     @include md {
-//         font-size: 30px;
-//     }
-//     @include sm {
-//         font-size: 25px;
-//     }
-// }
+@mixin font-40 {
+    font-size: 40px;
+    line-height: 160%;
+    @include md {
+        font-size: 30px;
+    }
+    @include sm {
+        font-size: 25px;
+    }
+}
 
 @mixin font-30 {
     font-size: 30px;
