--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,9 @@
 @import '../scss/marquee';
 @import '../scss/about';
 @import '../scss/huntersVsWhales';
+@import '../scss/toknomics';
+@import '../scss/team';
+@import '../scss/faq';
 // @import '../scss/services';
 // @import '../scss/ecosystem';
 // @import '../scss/roadmap';
