--- a/src/assets/scss/_faq.scss
+++ b/src/assets/scss/_faq.scss
@@ -15,6 +15,20 @@
         padding-top: 30px;
         padding-bottom: 20px;
     }
+    .faqBubleShap{
+        position: absolute;
+        left: 0;
+        top: -15%;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        @include mmd{
+            top: -15%;
+        }
+        @include sm{
+            top: -15%;
+        }
+    }
     .container{
         max-width: 1294px;
         margin-inline: auto;
