--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -29,54 +29,34 @@
         z-index: -1;
     }
     .footer-logo img{
-        max-width: 165px;
-        margin-bottom: 24px;
+        max-width: 214px;
     }
 
-    .social-logos a img {
-        max-width: 40px;
-        margin-bottom: 30px;
-        @include mmd{
-            margin-bottom: 15px;
-        }
-    }
-    
-    .social-logos li {
-        display: inline-block;
-        margin-right: 30px;
-        @include mmd{
-            margin-right: 15px;
-        }
-        &:hover a{
-            opacity: .5;
-        }
-    }
-    
-    .social-logos {
-        margin-top: 24px;
-    }
-    h4{
-        color: $heading;
-        margin-bottom: 15px;
-    }
     .footer-top{
-        margin-bottom: 130px;
-        @include mmd{
-            margin-bottom: 50px;
-        }
-        @include sm{
-            margin-bottom: 20px;
-        }
-        .footer-left{
-            max-width: 285px;
-            @include sm{
-                margin-inline: auto;
+        padding: 20px 60px 20px 20px;
+        border-radius: 16px;
+        border: 1px solid rgba(152, 190, 255, 0.12);
+        background: rgba(152, 190, 255, 0.06);
+        backdrop-filter: blur(17px);
+        .footer-menu{
+            li{
+                display: inline-block;
+                margin-left: 50px;
+                a{
+                    display: inline-block;
+                    color: rgba(255, 255, 255, 0.70);
+                    font-family: "Druk Text Trial";
+                    font-size: 18px;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: 150%; /* 27px */
+                    letter-spacing: 0.72px;
+                    padding: 10px 15px;
+                }
             }
         }
-        @include sm{
-            text-align: center;
-        }
     }
+    
     .footer-bottom{
         padding-block: 30px;
         position: relative;
@@ -87,58 +67,7 @@
             top: 0;
             width: 100%;
             height: 2px;
-            background-image: url('../img/Line.png');
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: center center;
+            background: rgba(152, 190, 255, 0.12);
         }
-        ul{
-            li{
-                display: inline-block;
-                margin-left: 15px;
-                padding-left: 15px;
-                position: relative;
-                &::before{
-                    position: absolute;
-                    content: "";
-                    left: 0;
-                    top: 20%;
-                    width: 1px;
-                    height: 60%;
-                    background-color: $paragraph;
-                }
-                a{
-                    color: $paragraph;
-                }
-                &:hover a{
-                    color: $heading;
-                }
-            }
-            li:nth-child(1)::before{
-                display: none;
-            }
-        }
-    }
-    .footer-menu-single-item{
-        padding-top: 15px;
-      h4{
-        margin-bottom: 20px;
-      }
-      li{
-        a{
-            font-size: 16px;
-            font-family: "Inter", sans-serif;
-            display: block;
-            margin-bottom: 12px;
-            color: $paragraph;
-        }
-        &:hover a{
-            color: $heading;
-        }
-      }
-      margin-bottom: 30px;
-      @include sm{
-        text-align: center;
-      }
     }
 }
