--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,7 +11,6 @@
 @import '../scss/toknomics';
 @import '../scss/team';
 @import '../scss/faq';
-// @import '../scss/services';
-// @import '../scss/ecosystem';
+@import '../scss/cta';
 // @import '../scss/roadmap';
-// @import '../scss/footer';
+@import '../scss/footer';
