--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,47 +1,59 @@
 .footer{
     position: relative;
     z-index: 1;
-    padding-top: 100px;
-    @include sm{
-        padding-top: 70px;
-    }
     &:before{
         position: absolute;
         content: "";
         left: 0;
-        top: 0;
+        bottom: 0px;
         width: 100%;
-        height: 100%;
+        height: 800px;
         background-image: url('../img/footerBG.png');
-        background-size: 100% 100%;
-        background-position: top center;
+        background-size: cover;
         background-repeat: no-repeat;
+        background-position: bottom center;
         z-index: -2;
     }
     &:after{
         position: absolute;
         content: "";
         left: 0;
-        top: 0;
+        bottom: 0;
         width: 100%;
-        height: 100%;
-        background: linear-gradient(180deg, #090925 0%, rgba(9, 9, 37, 0.00) 100%);
+        height: 400px;
+        background: radial-gradient(442.94% 204.06% at 50% 123.4%, rgba(0, 0, 0, 0.00) 21.67%, #407ffd9c 68.4%, #FFF 100%);
         z-index: -1;
+        rotate: 180deg;
     }
     .footer-logo img{
         max-width: 214px;
     }
 
     .footer-top{
-        padding: 20px 60px 20px 20px;
+        padding: 20px 20px 20px 20px;
         border-radius: 16px;
         border: 1px solid rgba(152, 190, 255, 0.12);
         background: rgba(152, 190, 255, 0.06);
         backdrop-filter: blur(17px);
+        @include sm{
+            padding-top: 25px;
+            border-radius: 0px;
+        }
         .footer-menu{
+            text-align: right;
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 30px;
+            justify-content: end;
+            @include sm{
+                justify-content: center;
+                column-gap: 20px;
+            }
+            @include ssm{
+                justify-content: center;
+                column-gap: 10px;
+            }
             li{
-                display: inline-block;
-                margin-left: 50px;
                 a{
                     display: inline-block;
                     color: rgba(255, 255, 255, 0.70);
@@ -53,12 +65,16 @@
                     letter-spacing: 0.72px;
                     padding: 10px 15px;
                 }
+                &:hover a{
+                    color: $white;
+                }
             }
         }
     }
     
     .footer-bottom{
         padding-block: 30px;
+        margin-top: 40px;
         position: relative;
         &:before{
             position: absolute;
