--- a/src/assets/scss/_huntersVsWhales.scss
+++ b/src/assets/scss/_huntersVsWhales.scss
@@ -1,6 +1,14 @@
 .hunter{
     position: relative;
     z-index: 1;
+    & .hunterShap{
+        position: absolute;
+        top: -60%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+    }
     &-content{
         max-width:900px;
         margin-inline: auto;
