--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,8 +7,10 @@
 @import '../scss/banner';
 @import '../scss/marquee';
 @import '../scss/about';
+@import '../scss/theSeaWhales';
 @import '../scss/huntersVsWhales';
 @import '../scss/toknomics';
+@import '../scss/showcash';
 @import '../scss/team';
 @import '../scss/faq';
 @import '../scss/cta';
