--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,10 +9,10 @@
 @import '../scss/about';
 @import '../scss/theSeaWhales';
 @import '../scss/huntersVsWhales';
+@import '../scss/roadmap';
 @import '../scss/toknomics';
 @import '../scss/showcash';
 @import '../scss/team';
 @import '../scss/faq';
 @import '../scss/cta';
-// @import '../scss/roadmap';
 @import '../scss/footer';
