--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -5,11 +5,10 @@
     z-index: 1;
     @include mmd{
         padding-top: 40px;
-        padding-bottom: 160px;
+        padding-bottom: 80px;
     }
     @include sm{
         padding-top: 0;
-        padding-bottom: 80px;
     }
     &::before{
         position: absolute;
@@ -57,4 +56,39 @@
             margin-top: 35px;
         }
     }
+}
+
+
+.swiper-button-prev, .swiper-button-next {
+    bottom: 0px;
+    top: auto;
+    width: 70px;
+    height: 70px;
+    background-color: #FFFFFF1A;
+    border-radius: 50%;
+    @include mmd{
+        transform: translateX(-50%);
+        left: calc(50% - 45px);
+    }
+}
+.swiper-button-next{
+    right: auto;
+    left: 90px;
+    @include mmd{
+        transform: translateX(-50%);
+        left: calc(50% + 45px);
+    }
+}
+.swiper {
+    overflow-x: hidden !important;
+    padding-bottom: 100px;
+}
+
+.swiper-button-prev:after, .swiper-button-next:after {
+    font-size: 32px;
+    color: #fff;
+    @include transition;
+}
+.swiper-button-prev:hover:after, .swiper-button-next:hover:after {
+   opacity: .5;
 }
