--- a/src/assets/scss/_cta.scss
+++ b/src/assets/scss/_cta.scss
@@ -1,6 +1,10 @@
 .cta{
     position: relative;
     z-index: 2;
+    padding-bottom: 175px;
+    @include sm{
+        padding-bottom: 100px;
+    }
     &-content{
         position: relative;
         z-index: 1;
