--- a/src/assets/scss/_huntersVsWhales.scss
+++ b/src/assets/scss/_huntersVsWhales.scss
@@ -1,6 +1,6 @@
 .hunter{
     position: relative;
-    z-index: 9;
+    z-index: 2;
     & .hunterShap{
         position: absolute;
         top: -60%;
@@ -12,6 +12,13 @@
     &-content{
         max-width:900px;
         margin-inline: auto;
+        margin-top: -100px;
+        @include lg{
+            margin-top: -70px;
+        }
+        @include mmd{
+            margin-top: -20px;
+        }
         h2{
             text-transform: uppercase;
             margin-bottom: 30px;
