--- a/src/assets/scss/_theSeaWhales.scss
+++ b/src/assets/scss/_theSeaWhales.scss
@@ -20,10 +20,11 @@
         }
     }
     &-content{
+        margin-top: -50px;
         max-width: 868px;
         margin-inline: auto;
         position: relative;
-        z-index: 0;
+        z-index: 2;
         h2{
             margin-bottom: 30px;
         }
@@ -43,4 +44,14 @@
             margin-top: 40px;
         }
     }
+
+      .swiper-slide-item img{
+        max-width: 400px;
+      }
+      .swiper-slide-active img{
+        transform: scale(1.3);
+      }
+      .swiper{
+        padding-bottom: 0 !important;
+      }
 }
