--- a/src/assets/scss/_roadmap.scss
+++ b/src/assets/scss/_roadmap.scss
@@ -116,8 +116,12 @@
             };
         }
     }
-}
-
+    .swiper {
+        @include ssm{
+            padding-bottom: 0;
+        }
+    }
+    
 .roadmap-content-left {
     position: relative;
     z-index: 1;
@@ -132,3 +136,16 @@
     height: 100%;
     background: rgba(255, 255, 255, 0.10);
 }
+
+.about-sinlge-item {
+    @include mmd{
+         padding: 0 10px;
+    }
+    @include ssm{
+        margin-left: 20px;
+    }
+    
+}
+}
+
+
