--- a/src/assets/scss/_toknomics.scss
+++ b/src/assets/scss/_toknomics.scss
@@ -24,14 +24,14 @@
     }
     & .vs_and{
         position: absolute;
-        top: 230px;
+        top: 30px;
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
         -webkit-text-stroke-width: 0.5753846168518066;
         -webkit-text-stroke-color: #000;
         font-family: "Druk Text Wide Trial";
-        font-size: 145px;
+        font-size: 110px;
         font-style: normal;
         font-weight: 700;
         line-height: 130%; /* 187px */
@@ -43,13 +43,18 @@
         max-width: 450px;
         text-align: center;
         z-index: -1;
+        @include lg{
+            position: relative;
+            top: 20px;
+            font-size: 80px;
+        }
         @include mmd{
             position: relative;
-            top: 100px;
-            font-size: 100px;
+            top: 60px;
+            font-size: 80px;
         }
         @include ssm{
-            font-size: 80px;
+            font-size: 70px;
             position: relative;
             top: 30px;
         }
