--- a/src/assets/scss/_cta.scss
+++ b/src/assets/scss/_cta.scss
@@ -1,6 +1,10 @@
 .cta{
     position: relative;
     z-index: 2;
+    overflow: hidden;
+    @include sm{        
+        margin-bottom: 30px;
+    }
     &-content{
         position: relative;
         z-index: 1;
@@ -11,10 +15,10 @@
         &:before{
             position: absolute;
             content: "";
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
+            left: -10%;
+            top: -10%;
+            width: 120%;
+            height: 120%;
             z-index: -1;
             border-radius: 24px;
             background: radial-gradient(50% 50% at 50% 50%, rgba(7, 9, 19, 0.60) 64.67%, rgba(7, 9, 19, 0.30) 100%);
@@ -27,6 +31,7 @@
             height: 100%;
             z-index: -2;
             border-radius: 24px;
+            object-fit: cover;
         }
         
         h2{
