--- a/src/assets/scss/_marquee.scss
+++ b/src/assets/scss/_marquee.scss
@@ -8,7 +8,7 @@
     z-index: 99;
     overflow-x: hidden;
     @include sm{
-        padding-block: 50px;
+        padding-block: 5px;
     }
     .rfm-initial-child-container {
         gap: 70px;
@@ -26,6 +26,9 @@
             @include mmd{
                 max-width: 400px;
             }
+            @include ssm{
+                max-width: 250px;
+            }
         }
     }
 }
@@ -37,6 +40,9 @@
                 max-width: 937px;
                 @include mmd{
                     max-width: 600px;
+                }
+                @include ssm{
+                    max-width: 350px;
                 }
             }
         }
