--- a/src/assets/scss/_showcash.scss
+++ b/src/assets/scss/_showcash.scss
@@ -4,11 +4,14 @@
     padding-top: 50px;
     @include sm{
         padding-top: 0px;
-        padding-bottom: 70px;
+        padding-bottom: 30px;
     }
     .rfm-child {
         margin-right: 30px;
         position: relative;
+        @include sm{
+            margin-right: 20px;
+        }
     }
     .single-item{
         position: relative;
@@ -19,7 +22,7 @@
             height: 100%;
         }
         @include sm{
-            width: 280px;
+            width: 220px;
         }
     }
     .showcase-info{
@@ -33,6 +36,7 @@
         padding: 20px;
         @include sm{
             border-radius: 10px;
+            padding: 10px;
         }
         .right img {
             max-width: 20px;
@@ -59,6 +63,9 @@
 }
 .showcaseOne{
     padding-bottom: 50px;
+    @include sm{
+        padding-bottom: 30px;
+    }
     .single-item{
         position: relative;
         z-index: 1;
@@ -67,6 +74,10 @@
         @include mmd{
             width: 400px;
             height: 70px;
+        }
+        @include mmd{
+            width: 300px;
+            height: auto;
         }
     }
 }
