--- a/src/assets/scss/_toknomics.scss
+++ b/src/assets/scss/_toknomics.scss
@@ -4,15 +4,15 @@
     padding-top: 250px;
     padding-bottom: 200px;
     @include lg{
-        padding-top: 150px;
-        padding-bottom: 170px;
+        padding-top: 100px;
+        padding-bottom: 100px;
     }
     @include mmd{
-        padding-top: 150px;
-        padding-bottom: 150px;
+        padding-top: 50px;
+        padding-bottom: 100px;
     }
     @include sm{
-        padding-top: 30px;
+        padding-top: 130px;
         padding-bottom: 100px;
     }
     @include ssm{
@@ -44,19 +44,19 @@
         text-align: center;
         z-index: -1;
         @include lg{
-            position: relative;
-            top: 20px;
+            top: 170px;
             font-size: 80px;
         }
         @include mmd{
-            position: relative;
-            top: 60px;
+            top: 160px;
             font-size: 80px;
+            margin-left: 50px;
         }
-        @include ssm{
+        @include sm{
             font-size: 70px;
             position: relative;
-            top: 30px;
+            top: 50px;
+            margin-left: 0;
         }
     }
 
@@ -120,6 +120,9 @@
     }
     .toknomics-content.right{
         @include mmd{
+         margin-top: 100px;
+        }
+        @include sm{
          margin-top: 100px;
         }
         @include ssm{
